--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.5.1",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
